src/assets/scss/components/_news.scss
.news {
  &__intro {
    .link {
      display: none;
    }
  }

  &__heading {
    @include font-sans('bold');

    font-size: clamp(var(--size-xl), 5vw, var(--size-xxxl));
  }

  &__list {
    background-color: var(--color-gray-light-90);
    padding: var(--size-xxl);
  }

  @media screen and (min-width: map-get($breakpoints, 'md')) {
    display: grid;
    grid-template-columns: 1fr var(--size-xl) var(--size-xl) 1fr;
    grid-template-rows: min-content auto var(--size-xxxl);

    &__intro {
      grid-row: 1;
      grid-column: 1;
      display: flex;
      align-items: flex-end;
      gap: var(--size-md);

      .link {
        display: flex;
      }
    }

    &__heading {
      margin-bottom: var(--size-xxs);
    }

    > &__cta {
      display: none;
    }

    &__featured {
      grid-row: 2 / 4;
      grid-column: 1 / 3;
      margin: 0;
      z-index: 2;
    }

    &__list {
      grid-row: 1 / 3;
      grid-column: 2 / -1;
      padding: var(--size-xxxxl) calc(var(--size-xl) * 2);
      // overflow: hidden;
    }
  }

  @media screen and (min-width: map-get($breakpoints, 'lg')) {
    &__list {
    }
  }
}

// -----------------------------------------
//	single news item
// -----------------------------------------
.news-item {
  $self: &;

  display: flex;
  gap: var(--size-xl);

  &:not(:last-child) {
    margin-bottom: var(--size-xxxl);
  }

  &__image img {
    aspect-ratio: 1 / 1;
    min-width: 150px;
  }

  .kicker {
    font-size: var(--size-xs);
  }

  &__heading {
    font-size: clamp(var(--size-lg), 4vw, var(--size-xl));
    margin-bottom: var(--size-xxs);
  }

  &__date {
    color: var(--color-gray-dark-40);
  }

  &--featured {
    flex-direction: column;

    #{$self}__image img {
      aspect-ratio: 3 / 2;
    }

    #{$self}__heading {
      margin-right: var(--size-xxl);
    }
  }
}

